# photobooth

./: .env.test  .envrc  .gitignore  API_MIGRATION.md  Makefile  README.md  TESTING_SETUP.md  TESTING_SUMMARY.md  TODO.md  docker-compose.yml  env.txt  pyproject.toml
.github/: copilot-instructions.md
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: conftest.py  test_accounts_models.py  test_admin.py  test_forms.py  test_views.py
config/: settings.py  urls.py
photobooth/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
photobooth/migrations/: 0001_initial.py  0002_photoboothsession_code_photoboothsession_created_by_and_more.py  0003_alter_photoboothsession_code.py  0004_rename_photoboothsession_to_event.py  0005_event_alter_photo_session_delete_photoboothsession.py
photobooth/tests/: conftest.py  test_admin.py  test_api_views.py  test_forms.py  test_integration.py  test_utils.py  test_views.py
scripts/: check_deploy_status.sh  create_db.py  install_db.sh  install_nginx.sh  install_redis.sh  install_rm-queue.sh  mac-create_db.py  mac-install_db.sh  mac-remove_db.py  remove_db.py  uninstall_db.sh  uninstall_gunicorn.sh  uninstall_nginx.sh  uninstall_redis.sh  uninstall_rm-server.sh  utils.sh
static/: camera_test.html  debug_camera.html
static/css/: photobooth.css
static/js/: photobooth-api.js  photobooth.js
templates/: _base.html
templates/account/: login.html  profile.html  signup.html
templates/pages/: home.html
templates/photobooth/: booth.html  event_create.html  event_detail.html  event_list.html  gallery.html  (+3 more)
(+3 files in other folders)
